--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -25,7 +25,6 @@ permalink: /hindu-ceremony
           <div class="col l10 right">
             <a href="#schedule"><button class="button button1">When</button></a>
             <a href="#venue"><button class="button button1">Where</button></a>
-            <a href="#rsvp"><button class="button button2">RSVP</button></a>
           </div>
         </div>
       </header>
@@ -71,16 +70,26 @@ permalink: /hindu-ceremony
         
         <section id="schedule">
           <div class="schedule row">
-            <div class="col l4 offset-l1 s12">
+            <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Arrive</span></br>
               <span class="schedule-time">12:30pm</span></br>
+              <span class="schedule-location">Temple</span></br>
             </div>
-            <div class="col l2 l-only">
+            <div class="col l1 l-only">
               <img class="star-icon" src="dist/imgs/star-icon-green.svg">
             </div>
-            <div class="col l4 s12">
+            <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Ceremony</span></br>
               <span class="schedule-time">13:00pm</span></br>
+              <span class="schedule-location">Temple</span></br>
+            </div>
+            <div class="col l1 l-only">
+              <img class="star-icon" src="dist/imgs/star-icon-green.svg">
+            </div>
+            <div class="col l2 offset-l1 s12">
+              <span class="schedule-header">Reception</span></br>
+              <span class="schedule-time">14:30pm</span></br>
+              <span class="schedule-location">Tynemouth</span></br>
             </div>
           </div>
         </section>
@@ -91,12 +100,119 @@ permalink: /hindu-ceremony
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
                 <h2 class="light-font">Hindu Temple Newcastle<br />172 West Road, Newcastle<br />NE4 9QB</h2>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2289.8129549108057!2d-1.6596339231645942!3d54.97637925152485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e771169a74257%3A0xb39070e3ef48aa4!2sHindu%20Temple%20Newcastle!5e0!3m2!1sen!2suk!4v1732287268662!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2289.8129549108057!2d-1.6596339231645942!3d54.97637925152485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e771169a74257%3A0xb39070e3ef48aa4!2sHindu%20Temple%20Newcastle!5e0!3m2!1sen!2suk!4v1732287268662!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
         </section>
 
+        <section id="reception">
+          <div class="row">
+            <div class="col l8 offset-l2 s12">
+              <div class="centre">
+                <h1 class="dark-font">Reception</h1>
+                <h2 class="dark-font">22 King Edward Road<br />Tynemouth<br />NE30 2RP</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2287.399616385884!2d-1.4322305!3d55.0186886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e6eeab3ac162b%3A0xbfb47fc91d505421!2s22%20King%20Edward%20Rd%2C%20Tynemouth%2C%20North%20Shields%20NE30%202RP!5e0!3m2!1sen!2suk!4v1750368565814!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="ceremony">
+          <div class="row">
+              <div class="col l8 offset-l2 s12">
+                  <div class="centre">
+                      <h1 class="dark-font">The Ceremony</h1>
+                      <p class="ceremony-description" style="text-align: center; font-size: 1.2rem; margin-bottom: 3rem;">
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Baraat & Milni - Welcome</h3>
+                      <p class="ceremony-description">
+                          The celebration begins as the bride's family welcomes the groom and his wedding party (baraat) at the entrance. The Milni ceremony follows, where families exchange garlands and gifts, allowing relatives from both sides to meet and bond for the first time.
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Pujas</h3>
+                      <p class="ceremony-description">
+                        Once the Groom, his parents and the Bride's parents take their respective places at the Bedi, the marriage ceremony starts with the <em>Ganesha Puja</em> (invocation of the God Ganesha), <em>Omkar Puja</em>, <em>Lakshmi Puja</em> (invocation of the Goddess of Wealth), <em>Kalash Puja</em> (invocation of the God of Water of Varun Devta) and the <em>Navgrah Puja</em>
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Jaimala - Exchange of Garlands</h3>
+                      <p class="ceremony-description">
+                         The bride welcomes her husband in the traditional manner by garlanding him. The groom in turn garlands his bride. This exchange of garlands is known as the <em>Jaimala</em>
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Kanyadaan - Giving Away the Bride</h3>
+                      <p class="ceremony-description">
+                        Once all the deities have been worshipped, sacred fire is lit to invoke the blessings of <em>Agni Devta</em> or the God of Fire. Fire forms an integral part of all Hindu customs and rituals, as it symbolizes purity and also acts as a witness to the marriage - in other words <em>Agni Sakshi</em>
+                        <br /><br />
+                        The Bride's parents offer their daughter's right hand in marriage to the groom amidst the chanting of sacred mantras and he accepts it.
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Havan - Sacred Fire Ceremony</h3>
+                      <p class="ceremony-description">
+                          The sacred fire ceremony purifies the atmosphere and creates a spiritual ambiance for the bride and groom's union. Fire represents purity and acts as Agni Devta (the fire god), who serves as the divine messenger carrying their prayers for a blessed married life (Grahast Jivan) to the heavens.
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Agni Parikrama - Four Sacred Rounds</h3>
+                      <p class="ceremony-description">
+                          Together, the Bride &amp; Groom circle the sacred fire four times, each round strengthening their marital bond. For the first three rounds, the bride leads, embodying Goddess Lakshmi. After the fourth round, she becomes the Ardhangani (wife), symbolizing the equal partnership in marriage. Before each round, the bride's brother offers parched rice to the sacred fire.
+                      </p>
+                      <ol class="four-aspects">
+                        <li>Dharma - Religous &amp; Moral Duties</li>
+                        <li>Artha - Wealth &amp; Prosperity</li>
+                        <li>Kaam - Love & Companionship</li>
+                        <li>Moksha - Spiritual Liberation</li>
+                      </ol>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Saptapadi - Seven Sacred Vows</h3>
+                      <p class="ceremony-description">
+                          The most significant ritual where the Bride &amp; Groom take seven steps together, each representing a sacred vow for their married life. These steps mark the beginning of their lifelong journey as partners.
+                      </p>
+                      <ol class="seven-vows">
+                        <li>To respect and honor each other</li>
+                        <li>To share each other's joy and sorrow</li>
+                        <li>To trust and be loyal to each other</li>
+                        <li>To cultivate appreciation for knowledge, values, sacrifice and service</li>
+                        <li>To reconfirm their vow of purity, love, family duties and spiritual growth</li>
+                        <li>To follow principles of Dharma (righteousness)</li>
+                        <li>To nurture an eternal bond of friendship and love</li>
+                      </ol>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Sindoor & Mangalsutra</h3>
+                      <p class="ceremony-description">
+                          The groom applies sindoor (vermillion powder) to the bride's hair parting and ties the mangalsutra (sacred necklace) around her neck. These are the final seals of their marriage bond. Five to seven happily married women then bless the bride by applying sindoor to her parted hair, passing on their good wishes for a joyful married life.
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Aashirvad - Blessings</h3>
+                      <p class="ceremony-description">
+                          With the sacred rituals complete, the Bride &amp; Groom receive blessings from all elders and family members. Everyone present showers them with flower petals, symbolizing their heartfelt wishes for the couple's happiness, prosperity, and a blessed married life ahead.
+                      </p>
+                  </div>
+
+                  <div class="ceremony-card">
+                      <h3 class="ceremony-title">Bidaai - The New Beginning</h3>
+                      <p class="ceremony-description">
+                          The ceremony concludes with the bidaai, as the bride and groom leave the bride's parental home together to begin their new life as husband and wife. Surrounded by the love and well-wishes of both families, they embark on their journey as one, carrying forward the blessings and traditions that have united them.
+                      </p>
+                  </div>
+              </div>
+          </div>
+        </section>
         <section id="faq">
           <div class="row">
             <div class="col l4 offset-l2 s12">
@@ -168,95 +284,6 @@ permalink: /hindu-ceremony
           <div class="faq-q">
             <div class="row">
               <div class="col l8 offset-l2 s12">
-                <input id="faq3" class="faq-toggle" type="checkbox">
-                <label for="faq3" class="faq-label">
-                  <div class="row">
-                    <div class="col l11 s10">
-                      When is the RSVP deadline?
-                    </div>
-                    <div class="col l1">
-                      <div class="faq-toggle-icon">
-                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
-                      </div>
-                    </div>
-                  </div>
-                </label>
-                <div class="faq-content">
-                  Please RSVP by the 31st January 2025
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-              <hr />
-              </div>
-            </div>
-          </div>
-
-          <div class="faq-q">
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-                <input id="faq4" class="faq-toggle" type="checkbox">
-                <label for="faq4" class="faq-label">
-                  <div class="row">
-                    <div class="col l11 s10">
-                      Where can we stay?
-                    </div>
-                    <div class="col l1">
-                      <div class="faq-toggle-icon">
-                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
-                      </div>
-                    </div>
-                  </div>
-                </label>
-                <div class="faq-content">
-                  We recommend staying in Tynemouth at any of the following hotels:
-                  <ul>
-                    <li>Tynemouth Castle Inn</li>
-                    <li>The Grand Hotel Tynemouth</li>
-                  </ul>
-                  Alternatively Newcastle is just a short metro or taxi ride away from Tynemouth where there are plenty of options
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-              <hr />
-              </div>
-            </div>
-          </div>
-
-          <div class="faq-q">
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-                <input id="faq5" class="faq-toggle" type="checkbox">
-                <label for="faq5" class="faq-label">
-                  <div class="row">
-                    <div class="col l11 s10">
-                      How to get to the venue?
-                    </div>
-                    <div class="col l1">
-                      <div class="faq-toggle-icon">
-                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
-                      </div>
-                    </div>
-                  </div>
-                </label>
-                <div class="faq-content">
-                  We advise you take Ubers from Tynemouth to the Temple. If you are driving then there is a carpark next to the venue
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-              <hr />
-              </div>
-            </div>
-          </div>
-
-          <div class="faq-q">
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
                 <input id="faq6" class="faq-toggle" type="checkbox">
                 <label for="faq6" class="faq-label">
                   <div class="row">
@@ -290,7 +317,7 @@ permalink: /hindu-ceremony
                 <label for="faq7" class="faq-label">
                   <div class="row">
                     <div class="col l11 s10">
-                      What to expect from the Hindu ceremony?
+                    Where can I park?
                     </div>
                     <div class="col l1">
                       <div class="faq-toggle-icon">
@@ -300,14 +327,9 @@ permalink: /hindu-ceremony
                   </div>
                 </label>
                 <div class="faq-content">
-                  The Hindu ceremony includes many different aspects which will include:
-                  <ul>
-                    <li><span class="strong">Jaimala (Garland Exchange)</span></br>The bride and groom exchange flower garlands as a gesture of mutual acceptance</li>
-                    <li><span class="strong">Havan and Vedic Rituals</span></br>A sacred fire is lit, and the priest chants Vedic mantras, invoking blessings from deities</li>
-
-                    <li><span class="strong">Saat Phere (Seven Sacred Rounds)</span></br>The couple takes seven rounds around the sacred fire, each representing a vow to support each other in various aspects of life</li>
-                    <li><span class="strong">Sindoor and Mangalsutra</span></br>The groom applies sindoor (vermilion) on the bride's forehead and ties the mangalsutra (sacred necklace) around her neck, signifying marriage </li>
-                  </ul>
+                  At the Temple there is a large car park directly next door (to the left if facing the Temple) which you can use
+                  <br /><br />
+                  In Tynemouth there is normally plenty of street parking, although it does get busy on Saturdays. Try nearby Mariner's Lane!
                 </div>
               </div>
             </div>
@@ -341,7 +363,6 @@ permalink: /hindu-ceremony
                       <button class="button button2">Contribute</button>
                     </a>
                   </div>
-
                 </div>
               </div>
             </div>
@@ -351,39 +372,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
           </div>
-
-
         </section>
-
-        <section id="rsvp">
-          <div class="row">
-            <div class="col l6 offset-l3">
-              <div class="centre">
-                <h1 class="rsvp-title">RSVP</h1>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col l6 offset-l3">
-              <div class="centre">
-                <span class="rsvp-text">
-                  Please let us know that you plan to attend by 31st January 2025<br/><br/>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col l6 offset-l3 s12">
-              <div class="centre rsvp-links">
-                <a href="https://forms.gle/2YstEzdj7pqXsSLa6">
-                  <button class="button button2">RSVP</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
-
       </main>
 		</body>
 	</head>
