--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <div class="col l10 right">
             <a href="#schedule"><button class="button button1">When</button></a>
             <a href="#venue"><button class="button button1">Where</button></a>
-            <a href="#rsvp"><button class="button button2">RSVP</button></a>
           </div>
         </div>
       </header>
@@ -69,7 +68,7 @@
           <div class="schedule row">
             <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Arrive</span></br>
-              <span class="schedule-time">12:00 pm</span></br>
+              <span class="schedule-time">11:45 am</span></br>
               <span class="schedule-location">Main Hall</span></br>
             </div>
             <div class="col l1 l-only">
@@ -77,8 +76,29 @@
             </div>
             <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Ceremony</span></br>
-              <span class="schedule-time">12:30 pm</span></br>
+              <span class="schedule-time">12:15 pm</span></br>
               <span class="schedule-location">Chapel</span></br>
+            </div>
+            <div class="col l1 l-only">
+              <img class="star-icon" src="dist/imgs/star-icon-gold.svg">
+            </div>
+            <div class="col l2 offset-l1 s12">
+              <span class="schedule-header">Drinks</span></br>
+              <span class="schedule-time">13:00 pm</span></br>
+              <span class="schedule-location">Lawn</span></br>
+            </div>
+            <div class="col l2 offset-l1 s12">
+              <span class="schedule-header">Breakfast</span></br>
+              <span class="schedule-time">15:00 pm</span></br>
+              <span class="schedule-location">Ballroom</span></br>
+            </div>
+            <div class="col l1 l-only">
+              <img class="star-icon" src="dist/imgs/star-icon-gold.svg">
+            </div>
+            <div class="col l2 offset-l1 s12">
+              <span class="schedule-header">Music</span></br>
+              <span class="schedule-time">19:00 pm</span></br>
+              <span class="schedule-location">Ballroom</span></br>
             </div>
             <div class="col l1 l-only">
               <img class="star-icon" src="dist/imgs/star-icon-gold.svg">
@@ -125,8 +145,8 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The ceremony will take place at 12:30pm at Lartington Hall followed by a day of festivities ending at 12am<br/><br/>
-                  Please arrive at the venue by 12:00pm at the latest
+                  The ceremony will take place at 12:15pm at Lartington Hall followed by a day of festivities ending at 12am<br/><br/>
+                  Please arrive at the venue by 11:45am
                 </div>
               </div>
             </div>
@@ -164,71 +184,6 @@
               </div>
             </div>
           </div>
-
-          <div class="faq-q">
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-                <input id="faq3" class="faq-toggle" type="checkbox">
-                <label for="faq3" class="faq-label">
-                  <div class="row">
-                    <div class="col l11 s10">
-                      When is the RSVP deadline?
-                    </div>
-                    <div class="col l1">
-                      <div class="faq-toggle-icon">
-                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
-                      </div>
-                    </div>
-                  </div>
-                </label>
-                <div class="faq-content">
-                  Please RSVP by 31st January 2025
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-              <hr />
-              </div>
-            </div>
-          </div>
-
-          <div class="faq-q">
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-                <input id="faq4" class="faq-toggle" type="checkbox">
-                <label for="faq4" class="faq-label">
-                  <div class="row">
-                    <div class="col l11 s10">
-                      Where can we stay?
-                    </div>
-                    <div class="col l1">
-                      <div class="faq-toggle-icon">
-                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
-                      </div>
-                    </div>
-                  </div>
-                </label>
-                <div class="faq-content">
-                  We have rooms on-site, please reach out to us (+44 7847 840 114) if you would like one and we can send you the options<br/>
-                  Alternatively you can also stay in Barnard Castle at any of the following sites:
-                  <ul>
-                    <li>The Morritt Hotel and Garage Spa</li>
-                    <li>Three Horseshoes Hotel</li>
-                    <li>Any of the local B&amp;B’s in Barnard Castle</li>
-                  </ul>
-
-                  We strongly recommend you stay within Barnard Castle or close to the surrounding area
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col l8 offset-l2 s12">
-              <hr />
-              </div>
-            </div>
-          </div>
-
 
           <div class="faq-q">
             <div class="row">
@@ -289,33 +244,6 @@
             <div class="row">
               <div class="col l8 offset-l2 s12">
               <hr />
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section id="rsvp">
-          <div class="row">
-            <div class="col l6 offset-l3">
-              <div class="centre">
-                <h1>RSVP</h1>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col l6 offset-l3">
-              <div class="centre">
-                <span class="rsvp-text">
-                  Please let us know that you plan to attend by 31st January 2025<br/><br/>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col l6 offset-l3 s12">
-              <div class="centre rsvp-links">
-                <a href="https://forms.gle/yMZApFHwN8dzuc867">
-                  <button class="button button2">RSVP</button>
-                </a>
               </div>
             </div>
           </div>
